  - Fix renaming repository when name contains invalid chararacters under project settings
  - Optimize checking if a user has read access to a list of issues !5370
  - Nokogiri's various parsing methods are now instrumented
  - Add a way to send an email and create an issue based on private personal token. Find the email address from issues page. !3363
  - Add build event color in HipChat messages (David Eisner)
  - Make fork counter always clickable. !5463 (winniehell)
  - All created issues, API or WebUI, can be submitted to Akismet for spam check !5333
  - The overhead of instrumented method calls has been reduced
  - Remove `search_id` of labels dropdown filter to fix 'Missleading URI for labels in Merge Requests and Issues view'. !5368 (Scott Le)
  - Load project invited groups and members eagerly in `ProjectTeam#fetch_members`
  - Bump gitlab_git to speedup DiffCollection iterations
  - Make branches sortable without push permission !5462 (winniehell)
  - Check for Ci::Build artifacts at database level on pipeline partial
  - Make "New issue" button in Issue page less obtrusive !5457 (winniehell)
  - Gitlab::Metrics.current_transaction needs to be public for RailsQueueDuration
  - Add GitLab Workhorse version to admin dashboard (Katarzyna Kobierska Ula Budziszewska)
  - Add the `sprockets-es6` gem
  - Multiple trigger variables show in separate lines (Katarzyna Kobierska Ula Budziszewska)
  - Profile requests when a header is passed
  - Avoid calculation of line_code and position for _line partial when showing diff notes on discussion tab.
  - Add commit stats in commit api. !5517 (dixpac)
  - Make error pages responsive (Takuya Noguchi)
  - Change requests_profiles resource constraint to catch virtually any file
  - Reduce number of queries made for merge_requests/:id/diffs
  - Sensible state specific default sort order for issues and merge requests !5453 (tomb0y)

v 8.10.3 (unreleased)
  - Fix importer for GitHub Pull Requests when a branch was removed